--- a/Login.html
+++ b/Login.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div id="imagi">
-        <img src="" alt="">
+        <img src="img/tech_investment_logo_v1-removebg-preview (1).png" alt="">
     </div>
     <div class="login">
         <h1>Login</h1>
         <p>Acesse sua conta para entrar no site.</p>
         
-        <form class="botao">
+        <form>
             <label for="Email">Email</label>
             <input type="email" id="Email" name="Email" placeholder="Digite seu email" required>
             
