--- a/Login.html
+++ b/Login.html
@@ -26,7 +26,7 @@
         
         <div class="esqueci_c">
             <a onclick="irEsqueciMinhaSenha()">Esqueci minha senha</a>
-            <a href="CadastroData.html">Cadastre-se</a>
+            <a href="Cadastro.html">Cadastre-se</a>
         </div>
     </div>
     <script src="script.js"></script>
