--- a/Cadastro.html
+++ b/Cadastro.html
@@ -17,13 +17,13 @@
         <div class="caixa_informacoes">
             <h1>Criar Conta</h1>
             <h4>Junte-se a milhares de investidores inteligentes</h4>
-            <label for="nomecompleto">Nome Completo</label>
+            <label for="nomecompleto">Nome Completo</label><br>
             <input type="text" class="nomecompleto"><br>
-            <label for="gmail">E-mail</label>
+            <label for="gmail">E-mail</label><br>
             <input type="email" class="gmail"><br>
-            <label for="senha">Senha</label>
+            <label for="senha">Senha</label><br>
             <input type="password" class="senha"><br>
-            <label for="confirmarsenha">Confirmar Senha</label>
+            <label for="confirmarsenha">Confirmar Senha</label><br>
             <input type="password" class="confirmarsenha"><br>
             <input type="checkbox" class="aceitartermos"><label for="aceitartermos">Acerto os termos de uso e política
                 de privacidade</label><br>
