--- a/DashBoard.html
+++ b/DashBoard.html
@@ -13,8 +13,8 @@
             <img class="header" src="img/tech_investment_logo_v1-removebg-preview (1).png" alt="Logo da empresa">
             <button class="BotoesAcesso">DashBoard</button>
             <button class="BotoesAcesso2">Perfil</button>    
-            <button class="BotoesAcesso">Equipe</button>
-            <button class="BotoesAcesso">Suporte</button>
+            <button class="BotoesAcesso2">Equipe</button>
+            <button class="BotoesAcesso2">Suporte</button>
         </div>
     </header>
     <main></main>
