--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -20,9 +20,9 @@
 
             <div class="Caixaminhasenha">
                 <img src="" alt="">
-                <h1>Esqueci Minha Senha</h1>
+                <p> Esqueci Minha Senha</p>
                 <p>Digite seu e-mail para receber instruções de recuperação</p>
-                <h1>E-mail cadastrado</h1>
+                <p>E-mail cadastrado</p>
                 <input type="email">
                 <button>Enviar instruções</button>
                 <p>Lembrou da senha?</p><a href="Login.html">Voltar ao login</a>
@@ -30,7 +30,7 @@
         </div>
     </main>
     <footer>
-    <div>
+    <div class="caixaprecisadeajuda">
         <h1>Precisa de ajuda?</h1>
         <p>Entre em contato com nosso suporte através do chat ou e-mail</p>
     </div>
