--- a/Cadastro.html
+++ b/Cadastro.html
@@ -10,25 +10,39 @@
 
 <body class="corpo">
     <header class="titulo">
-        <button>← Voltar</button>
-        <h1>TechInvestiment</h1>
+        <button class="botaovolta">←  Voltar</button>
+        <div class="toptop">
+            <img src="img/logo.png" alt="logo" class="imgtop">
+        <h1 class="h1top">TechInvestiment</h1>
+        </div>
     </header>
     <main>
         <div class="caixa_informacoes">
             <h1>Criar Conta</h1>
             <h4>Junte-se a milhares de investidores inteligentes</h4>
-            <label for="nomecompleto">Nome Completo</label><br>
-            <input type="text" class="nomecompleto"><br>
-            <label for="gmail">E-mail</label><br>
-            <input type="email" class="gmail"><br>
-            <label for="senha">Senha</label><br>
-            <input type="password" class="senha"><br>
-            <label for="confirmarsenha">Confirmar Senha</label><br>
-            <input type="password" class="confirmarsenha"><br>
-            <input type="checkbox" class="aceitartermos"><label for="aceitartermos">Acerto os termos de uso e política
-                de privacidade</label><br>
-            <button class="criarconta">Criar Conta</button>
-            <p>Já tem uma conta?<a href=""> Faça login aqui</a></p>
+      <div class="texto">
+        <label for="nomecompleto">Nome Completo</label>
+        <input type="text" class="nomecompleto" placeholder="Seu nome completo">
+    </div>
+    <div class="texto">
+        <label for="gmail">E-mail</label>
+        <input type="email" class="gmail" placeholder="Seu@email.com">
+    </div>
+    <div class="texto">
+        <label for="senha">Senha</label>
+        <input type="password" class="senha" placeholder="Crie uma senha segura">
+    </div>
+    <div class="texto">
+        <label for="confirmarsenha">Confirmar Senha</label>
+        <input type="password" class="confirmarsenha" placeholder="Confirme sua senha">
+    </div>
+    <div class="check">
+    <input type="checkbox" class="aceitartermos" id="aceitartermos">
+    <label for="aceitartermos" class="labelace">Aceito os termos de uso e política de privacidade</label>
+    </div>
+    <button class="criarconta">Criar Conta</button>
+    <p class="jatem">Já tem uma conta?<a href="" class="alink"> Faça login aqui</a></p>
+</div>
         </div>
     </main>
 
