--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -13,19 +13,25 @@
 
 
     <main>
-        <div>
-            <button>←Voltar</button>
+        <div class="cabeça">
+            <button class="minhasenhavoltar">←     Voltar</button>
         </div>
+        <div class="titulotop">
+            <img src="img/logo.png" alt="logo" class="imagemtop">
+            <h1 class="h1top">TechInvestiment</h1> 
+
+        </div>
+        
             <img src="" alt="">
 
             <div class="Caixaminhasenha">
-                <img src="" alt="">
-                <p> Esqueci Minha Senha</p>
-                <p>Digite seu e-mail para receber instruções de recuperação</p>
-                <p>E-mail cadastrado</p>
-                <input type="email">
-                <button>Enviar instruções</button>
-                <p>Lembrou da senha?</p><a href="Login.html">Voltar ao login</a>
+                <img src="img/carta.png" alt="logo">
+                <p class="texto1"> Esqueci Minha Senha</p>
+                <p class="texto2">Digite seu e-mail para receber instruções de recuperação</p>
+                <p class="texto3">E-mail cadastrado</p>
+                <input type="email" class="inputemail">
+                <button class="butaoinsano">Enviar instruções</button>
+                <p class="chapou">Lembrou da senha?</p><a href="Login.html" class="ai">Voltar ao login</a>
             </div>
         </div>
     </main>
