--- a/EsqueciMinhaSenha.html
+++ b/EsqueciMinhaSenha.html
@@ -14,7 +14,7 @@
 
     <main>
         <div class="cabeça">
-            <button class="minhasenhavoltar">←     Voltar</button>
+            <button class="minhasenhavoltar">← Voltar ao Login</button>
         </div>
         <div class="titulotop">
             <img src="img/logo.png" alt="logo" class="imagemtop">
