--- a/DashBoard.html
+++ b/DashBoard.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicial</title>
     <link rel="stylesheet" href="DashBoard.css">
-    
+
 </head>
+
 <body>
     <header>
         <div class="head">
-            <img class="header" src="img/tech_investment_logo_v1-removebg-preview (1).png" alt="Logo da empresa">
+            <img class="header" src="img/logo.png" alt="Logo da empresa">
             <button class="BotoesAcesso">DashBoard</button>
-            <button class="BotoesAcesso2">Perfil</button>    
+            <button class="BotoesAcesso2">Perfil</button>
             <button class="BotoesAcesso2">Equipe</button>
             <button class="BotoesAcesso2">Suporte</button>
         </div>
     </header>
-    <main></main>
+    <main class="main">
+        <div class="pagina">
+            <h2>DashBoard</h2>
+            <p>Acompanhe seus investimentos em tempo real</p>
+        </div>
+    </main>
     <footer></footer>
-    
+
 </body>
+
 </html>
