--- a/equipe.html
+++ b/equipe.html
@@ -29,7 +29,55 @@
                 <p>texto descritivo</p>
                 <p></p>
                 <p></p>
-                
+                <button>a</button>
+                <button>a</button>
+                <button>a</button>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h2>Carlos</h2>
+                <h3>frontend</h3>
+                <p>texto descritivo</p>
+                <p></p>
+                <p></p>
+                <button>a</button>
+                <button>a</button>
+                <button>a</button>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h2>Carlos</h2>
+                <h3>frontend</h3>
+                <p>texto descritivo</p>
+                <p></p>
+                <p></p>
+                <button>a</button>
+                <button>a</button>
+                <button>a</button>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h2>Carlos</h2>
+                <h3>frontend</h3>
+                <p>texto descritivo</p>
+                <p></p>
+                <p></p>
+                <button>a</button>
+                <button>a</button>
+                <button>a</button>
+            </div>
+            <div class="sobretech">
+                <h1>Sobre o TechInvestiment</h1>
+                <p>Somos uma equipe apaixonada por tecnologia e finanças, dedicada a democratizar o acesso aos investimentos através de uma plataforma simples, segura e intuitiva.</p>
+                <p>Nossa missão é tornar os investimentos acessíveis para todos, independentemente do nível de conhecimento financeiro, fornecendo as ferramentas e informações necessárias para tomar decisões inteligentes.</p>
+                <h2>2024</h2>
+                <p>Ano de Fundação</p>
+
+                <h2>1000+</h2>
+                <p>Usuarios Ativos</p>
+
+                <h2>24/7</h2>
+                <p>Suporte Disponivel</p>
             </div>
 
         </div>
