--- a/Suporte.html
+++ b/Suporte.html
@@ -17,10 +17,9 @@
         </div>
     </header>
     <main class="main">
-        <div class="pagina">
+        <div class="">
             
         </div>
     </main>
-    <footer></footer>
 </body>
 </html>
