--- a/DashBoard.html
+++ b/DashBoard.html
@@ -24,6 +24,17 @@
             <h2>DashBoard</h2>
             <p>Acompanhe seus investimentos em tempo real</p>
         </div>
+        <div class="conteiners">
+            <div class="caixas">
+                <h2>patrimono total</h2>
+            </div>
+            <div class="caixas">
+                <h2>Rentabilidade</h2>
+            </div>
+            <div class="caixas">
+                <h2>Meta mensal</h2>
+            </div>
+        </div>
     </main>
     <footer></footer>
 
