--- a/equipe.html
+++ b/equipe.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <header>
-        <div  class="comecotop">
-            <h2>TechInvestiment</h2>
-            <button>DashBord</button>
-            <button>Perfil</button>
-            <button>Equipe</button>
-            <button>Suporte</button>
-            <a href="Login.html"><img src="img/logo.png" alt="perfil"></a>
+        <div class="head">
+            <img class="header" src="img/logo.png" alt="Logo da empresa">
+            <button class="BotoesAcesso">DashBoard</button>
+            <button class="BotoesAcesso2">Perfil</button>
+            <button class="BotoesAcesso2">Equipe</button>
+            <button class="BotoesAcesso2">Suporte</button>
         </div>
     </header>
     <main>
         <h1>Nossa Equipe</h1>
         <h3>Conheça os profissionais dedicados que tornam o TechInvestment uma plataforma confiável e inovadora para seus investimentos</h3>
         <div class="profissionais">
-            <div>
+            <div class="carlos">
                 <img src="" alt="">
                 <h2>Carlos</h2>
                 <h3>frontend</h3>
@@ -33,7 +32,7 @@
                 <button>a</button>
                 <button>a</button>
             </div>
-            <div>
+            <div class="vinicius">
                 <img src="" alt="">
                 <h2>Carlos</h2>
                 <h3>frontend</h3>
@@ -44,7 +43,7 @@
                 <button>a</button>
                 <button>a</button>
             </div>
-            <div>
+            <div class="guilherme">
                 <img src="" alt="">
                 <h2>Carlos</h2>
                 <h3>frontend</h3>
@@ -55,7 +54,7 @@
                 <button>a</button>
                 <button>a</button>
             </div>
-            <div>
+            <div class="ryan">
                 <img src="" alt="">
                 <h2>Carlos</h2>
                 <h3>frontend</h3>
@@ -66,6 +65,7 @@
                 <button>a</button>
                 <button>a</button>
             </div>
+        </div>
             <div class="sobretech">
                 <h1>Sobre o TechInvestiment</h1>
                 <p>Somos uma equipe apaixonada por tecnologia e finanças, dedicada a democratizar o acesso aos investimentos através de uma plataforma simples, segura e intuitiva.</p>
@@ -79,8 +79,6 @@
                 <h2>24/7</h2>
                 <p>Suporte Disponivel</p>
             </div>
-
-        </div>
     </main>
 </body>
 </html>
