--- a/DashBoard.html
+++ b/DashBoard.html
@@ -25,15 +25,29 @@
             <p>Acompanhe seus investimentos em tempo real</p>
         </div>
         <div class="conteiners">
-            <div class="caixas">
+            <div class="caixas1">
                 <h2>patrimono total</h2>
+                <p>R$ 20.000</p>
+                <p>+2.1% este mes</p>
             </div>
             <div class="caixas">
                 <h2>Rentabilidade</h2>
+                <p>+12.5%</p>
+                <p>Ultimos 12 meses</p>
             </div>
             <div class="caixas">
                 <h2>Meta mensal</h2>
+                <p>78%</p>
+                <p>------------</p>
             </div>
+        </div>
+        <div class="foco">
+            <h3>Meus investimentos</h3>
+            <p class="borda">Tesouro direto</p>
+            <p class="borda">CDB</p>
+            <p class="borda">Nubank</p>
+            <p class="borda">Itau</p>
+            <p class="borda">Nintendo</p>
         </div>
     </main>
     <footer></footer>
