ja pensem em tudo

--- a/Suporte.html
+++ b/Suporte.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suporte</title>
     <link rel="stylesheet" href="Suporte.css">
 </head>
+
 <body>
     <header>
         <div class="head">
@@ -17,129 +19,194 @@
         </div>
     </header>
     <main class="main">
-        <div>
-        <img src="" alt="">
-        <p>Central de Suporte</p>
+        <div class="centralsuporte">
+            <img src="img/logointerrogação.png" alt="icone">
+            <p>Central de Suporte</p>
         </div>
-    
-        <p>Estamos aqui para ajudar! Encontre respostas rápidas ou entre em contato conosco.</p>
+        <div class="ajuda">
+            <p>Estamos aqui para ajudar! Encontre respostas rápidas ou entre em contato conosco.</p>
+        </div>
 
-    <div>
+
         <div>
-                <img src="" alt="">
+            <div class="chat">
+                <img src="img/logomensagem.png" alt="icone">
                 <p>Chat Online</p>
                 <p>Resposta imediata durante horário comercial</p>
                 <p>Seg-Sex: 8h ás 12h</p>
                 <button>Iniciar Chat</button>
-        </div> 
-        <div>
+            </div>
+            <div>
                 <img src="" alt="">
                 <p>E-mail</p>
                 <p>Resposta em até 24 horas</p>
                 <p>suporte@techinvestment.com</p>
                 <button>Enviar E-mail</button>
-        </div> 
-        <div>
+            </div>
+            <div>
                 <img src="" alt="">
                 <p>Telefone</p>
                 <p>Atendimento personalizado</p>
                 <p>0800 123 4567</p>
                 <button>Ligar Agora</button>
-        </div>
-    </div>
-    <section>
-        <div>
-            <div>
-                <img src="" alt=""> 
-                <p>Perguntas Frequentes</p>
-            </div>
-            <p>Encontre respostas para as dúvidas mais comuns</p>
-            <div>
-                <input type="text" placeholder="Buscar Perguntas Frequentes">
-                <button>Todas</button>
-                <button> Conta</button>
-                <button>Investimentos</button>  
-                <button>Pagamentos</button>
-            </div>
-
-            <div>
-                <img src="" alt="">
-                <p>Conta</p>
-            </div>
-            <div>
-                <hr>
-                <p>Como criar uma conta no TechInvestiment?</p>
-                <p>É muito simples! Clique em "Cadastrar" na página inicial, preencha seus dados básicos e confirme seu e-mail. Todo o processo leva menos de 5 minutos.</p>
-            </div>
-            <div>
-                <hr>
-                <p>Como alterar minha senha?</p>
-                <p>Vá em "Perfil" > "Segurança" e clique em "Alterar Senha". Você receberá um link de confirmação por e-mail.</p>
-            </div>
-            <div>
-                <hr>
-                <p>Posso ter mais de uma conta?</p>
-                <p>Cada pessoa pode ter apenas uma conta vinculada ao seu CPF, conforme regulamentação da CVM.</p>
-            </div>
-            <hr>
-            <div>
-                <img src="" alt="">
-                Investimentos
-            </div>
-            <div>
-                <hr>
-                <p>Qual o valor mínimo para começar a investir?</p>
-                <p>Você pode começar com apenas R$ 100. Temos opções de investimento para todos os perfis e orçamentos.</p>
-            </div>
-            <div>
-                <hr>
-                <p>Como funciona a diversificação?</p>
-                <p>A diversificação é distribuir seus investimentos em diferentes tipos de ativos para reduzir riscos. Nossa plataforma te ajuda a criar um portfólio equilibrado.</p>
-            </div>
-            <div>
-                <p>Quando posso resgatar meus investimentos?</p>
-                <p>Depende do tipo de investimento. Alguns são diários (como fundos DI), outros têm prazos específicos (como CDBs). Todas as informações estão disponíveis antes de investir.</p>
-            </div>
-            <hr>
-            <div>
-                <img src="" alt="">
-                <p>Pagamentos</p>
-            </div>
-            <div>
-                <p>Quais formas de pagamento são aceitas?</p>
-                <p>Aceitamos TED, DOC, PIX e transferência bancária. O PIX é processado instantaneamente.</p>
-            </div>
-            <div>
-                <p>Há alguma taxa para aportes?</p>
-                <p>Não cobramos taxas para aportes via PIX ou TED. Algumas operações específicas podem ter custos que são informados previamente.</p>
-            </div>
-            <div>
-                <p>Como funciona o resgate?</p>
-                <p>Os resgates são processados em até 2 dias úteis e o valor é creditado na sua conta bancária cadastrada.</p>
-            </div>
-
-        </div>
-
-        <div>
-            <div>
-                <img src="" alt="">
-                <p>Contato Direto</p>
-            </div>
-            <div>
-                <p>Não encontrou o que procurava? Envie sua dúvida</p>
-                <p>Nome</p>
-                <input type="text" name="" id="">
-                <p>E-mail</p>
-                <input type="email">
-                <p>Assunto</p>
-                <input type="text">
-                <p>Prioridade</p>
-                <input type="">
             </div>
         </div>
+        <section>
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <p>Perguntas Frequentes</p>
+                </div>
+                <p>Encontre respostas para as dúvidas mais comuns</p>
+                <div>
+                    <input type="text" placeholder="Buscar Perguntas Frequentes">
+                    <button>Todas</button>
+                    <button> Conta</button>
+                    <button>Investimentos</button>
+                    <button>Pagamentos</button>
+                </div>
 
+                <div>
+                    <img src="" alt="">
+                    <p>Conta</p>
+                </div>
+                <div>
+                    <hr>
+                    <p>Como criar uma conta no TechInvestiment?</p>
+                    <p>É muito simples! Clique em "Cadastrar" na página inicial, preencha seus dados básicos e confirme
+                        seu e-mail. Todo o processo leva menos de 5 minutos.</p>
+                </div>
+                <div>
+                    <hr>
+                    <p>Como alterar minha senha?</p>
+                    <p>Vá em "Perfil" > "Segurança" e clique em "Alterar Senha". Você receberá um link de confirmação
+                        por e-mail.</p>
+                </div>
+                <div>
+                    <hr>
+                    <p>Posso ter mais de uma conta?</p>
+                    <p>Cada pessoa pode ter apenas uma conta vinculada ao seu CPF, conforme regulamentação da CVM.</p>
+                </div>
+                <hr>
+                <div>
+                    <img src="" alt="">
+                    Investimentos
+                </div>
+                <div>
+                    <hr>
+                    <p>Qual o valor mínimo para começar a investir?</p>
+                    <p>Você pode começar com apenas R$ 100. Temos opções de investimento para todos os perfis e
+                        orçamentos.</p>
+                </div>
+                <div>
+                    <hr>
+                    <p>Como funciona a diversificação?</p>
+                    <p>A diversificação é distribuir seus investimentos em diferentes tipos de ativos para reduzir
+                        riscos. Nossa plataforma te ajuda a criar um portfólio equilibrado.</p>
+                </div>
+                <div>
+                    <p>Quando posso resgatar meus investimentos?</p>
+                    <p>Depende do tipo de investimento. Alguns são diários (como fundos DI), outros têm prazos
+                        específicos (como CDBs). Todas as informações estão disponíveis antes de investir.</p>
+                </div>
+                <hr>
+                <div>
+                    <img src="" alt="">
+                    <p>Pagamentos</p>
+                </div>
+                <div>
+                    <p>Quais formas de pagamento são aceitas?</p>
+                    <p>Aceitamos TED, DOC, PIX e transferência bancária. O PIX é processado instantaneamente.</p>
+                </div>
+                <div>
+                    <p>Há alguma taxa para aportes?</p>
+                    <p>Não cobramos taxas para aportes via PIX ou TED. Algumas operações específicas podem ter custos
+                        que são informados previamente.</p>
+                </div>
+                <div>
+                    <p>Como funciona o resgate?</p>
+                    <p>Os resgates são processados em até 2 dias úteis e o valor é creditado na sua conta bancária
+                        cadastrada.</p>
+                </div>
 
-    </section>
+            </div>
+
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <p>Contato Direto</p>
+                </div>
+                <div>
+                    <p>Não encontrou o que procurava? Envie sua dúvida</p>
+                    <p>Nome</p>
+                    <input type="text" name="" id="">
+                    <p>E-mail</p>
+                    <input type="email">
+                    <p>Assunto</p>
+                    <input type="text">
+                    <p>Prioridade</p>
+                    <input type="">
+                    <p>Mensagem</p>
+                    <input type="text" placeholder="Descreva sua duvida ou problema...">
+                    <button>Enviar Mensagem</button>
+                </div>
+                <div>
+                    <div>
+                        <img src="" alt="">
+                        <p>Status de Mensagem</p>
+                    </div>
+                    <div>
+                        <p>Plataforma Web</p>
+                    </div>
+                    <div>
+                        <p>API de Investimentos</p>
+                    </div>
+                    <div>
+                        <p>Sistema de Pagamentos</p>
+                    </div>
+                    <hr>
+                    <p>Última atualização: hoje às 14:30</p>
+                </div>
+            </div>
+            <div>
+                <p>Recursos Úteis</p>
+                <p>Materiais educativos para te ajudar a investir melhor</p>
+                <div>
+                    <div>
+                        <button>
+                            <img src="" alt="">
+                            <p></p>
+                            <p></p>
+                        </button>
+                    </div>
+                    <div>
+                        <button>
+                            <img src="" alt="">
+                            <p></p>
+                            <p></p>
+                        </button>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <button>
+                            <img src="" alt="">
+                            <p></p>
+                            <p></p>
+                        </button>
+                    </div>
+                    <div>
+                        <button>
+                            <img src="" alt="">
+                            <p></p>
+                            <p></p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
+
 </html>
