--- a/Suporte.html
+++ b/Suporte.html
@@ -28,26 +28,26 @@
         </div>
 
 
-        <div>
+        <div class="maesuperior">
             <div class="chat">
                 <img src="img/logomensagem.png" alt="icone">
-                <p>Chat Online</p>
-                <p>Resposta imediata durante horário comercial</p>
-                <p>Seg-Sex: 8h ás 12h</p>
+                <p class="pindividual">Chat Online</p>
+                <p class="p1">Resposta imediata durante horário comercial</p>
+                <p class="p2">Seg-Sex: 8h ás 12h</p>
                 <button>Iniciar Chat</button>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="chat">
+                <img src="img/logocarta.png" alt="icone">
                 <p>E-mail</p>
                 <p>Resposta em até 24 horas</p>
                 <p>suporte@techinvestment.com</p>
                 <button>Enviar E-mail</button>
             </div>
-            <div>
-                <img src="" alt="">
-                <p>Telefone</p>
-                <p>Atendimento personalizado</p>
-                <p>0800 123 4567</p>
+            <div class="chat">
+                <img src="img/logotelefone.png" alt="icone">
+                <p class="pindividual">Telefone</p>
+                <p class="p1">Atendimento personalizado</p>
+                <p class="p2">0800 123 4567</p>
                 <button>Ligar Agora</button>
             </div>
         </div>
