--- a/Suporte.html
+++ b/Suporte.html
@@ -30,17 +30,17 @@
 
         <div class="maesuperior">
             <div class="chat">
-                <img src="img/logomensagem.png" alt="icone">
+                <img src="img/logomensagem1.png" alt="icone">
                 <p class="pindividual">Chat Online</p>
                 <p class="p1">Resposta imediata durante horário comercial</p>
                 <p class="p2">Seg-Sex: 8h ás 12h</p>
                 <button>Iniciar Chat</button>
             </div>
             <div class="chat">
-                <img src="img/logocarta.png" alt="icone">
-                <p>E-mail</p>
-                <p>Resposta em até 24 horas</p>
-                <p>suporte@techinvestment.com</p>
+                <img src="img/logocarta1.png" alt="icone">
+                <p class="pindividual">E-mail</p>
+                <p class="p1">Resposta em até 24 horas</p>
+                <p class="p2">suporte@techinvestment.com</p>
                 <button>Enviar E-mail</button>
             </div>
             <div class="chat">
