--- a/Cadastro.html
+++ b/Cadastro.html
@@ -10,42 +10,42 @@
 
 <body class="corpo">
     <header class="titulo">
-        <button class="botaovolta">←  Voltar</button>
+        <button class="botaovolta">← Voltar</button>
         <div class="toptop">
             <img src="img/logo.png" alt="logo" class="imgtop">
-        <h1 class="h1top">TechInvestiment</h1>
+            <h1 class="h1top">TechInvestiment</h1>
         </div>
     </header>
     <main>
         <div class="caixa_informacoes">
             <h1>Criar Conta</h1>
             <h4>Junte-se a milhares de investidores inteligentes</h4>
-      <div class="texto">
-        <label for="nomecompleto">Nome Completo</label>
-        <input type="text" class="nomecompleto" placeholder="Seu nome completo">
-    </div>
-    <div class="texto">
-        <label for="gmail">E-mail</label>
-        <input type="email" class="gmail" placeholder="Seu@email.com">
-    </div>
-    <div class="texto">
-        <label for="senha">Senha</label>
-        <input type="password" class="senha" placeholder="Crie uma senha segura">
-    </div>
-    <div class="texto">
-        <label for="confirmarsenha">Confirmar Senha</label>
-        <input type="password" class="confirmarsenha" placeholder="Confirme sua senha">
-    </div>
-    <div class="check">
-    <input type="checkbox" class="aceitartermos" id="aceitartermos">
-    <label for="aceitartermos" class="labelace">Aceito os termos de uso e política de privacidade</label>
-    </div>
-    <button class="criarconta">Criar Conta</button>
-    <p class="jatem">Já tem uma conta?<a href="" class="alink"> Faça login aqui</a></p>
-</div>
+            <div class="texto">
+                <label for="nomecompleto">Nome Completo</label>
+                <input type="text" class="nomecompleto" placeholder="Seu nome completo">
+            </div>
+            <div class="texto">
+                <label for="gmail">E-mail</label>
+                <input type="email" class="gmail" placeholder="Seu@email.com">
+            </div>
+            <div class="texto">
+                <label for="senha">Senha</label>
+                <input type="password" class="senha" placeholder="Crie uma senha segura">
+            </div>
+            <div class="texto">
+                <label for="confirmarsenha">Confirmar Senha</label>
+                <input type="password" class="confirmarsenha" placeholder="Confirme sua senha">
+            </div>
+            <div class="check">
+                <input type="checkbox" class="aceitartermos" id="aceitartermos">
+                <label for="aceitartermos" class="labelace">Aceito os termos de uso e política de privacidade</label>
+            </div>
+            <button onclick="irTezte()" class="criarconta" id="btnCriarConta">Criar Conta</button>
+            <p class="jatem">Já tem uma conta?<a href="" class="alink"> Faça login aqui</a></p>
+        </div>
         </div>
     </main>
-
+<script src="script.js"></script>
 </body>
 
 </html>
