--- a/DashBoard.html
+++ b/DashBoard.html
@@ -13,10 +13,11 @@
     <header>
         <div class="head">
             <img class="header" src="img/logo.png" alt="Logo da empresa">
+            <h1>TechInvestiment</h1>
             <button class="BotoesAcesso">DashBoard</button>
-            <button class="BotoesAcesso2">Perfil</button>
-            <button class="BotoesAcesso2">Equipe</button>
-            <button class="BotoesAcesso2">Suporte</button>
+            <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
+            <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
+            <button onclick="irSuporte()" class="BotoesAcesso2">Suporte</button>
         </div>
     </header>
     <main class="main">
@@ -51,7 +52,7 @@
         </div>
     </main>
     <footer></footer>
-
+<script src="script.js"></script>
 </body>
 
 </html>
