--- a/Suporte.html
+++ b/Suporte.html
@@ -12,9 +12,10 @@
     <header>
         <div class="head">
             <img class="header" src="img/logo.png" alt="Logo da empresa">
-            <button class="BotoesAcesso">DashBoard</button>
-            <button class="BotoesAcesso2">Perfil</button>
-            <button class="BotoesAcesso2">Equipe</button>
+            <h1>TechInvestiment</h1>
+            <button onclick="irDashBoard()" class="BotoesAcesso">DashBoard</button>
+            <button onclick="irPerfil()" class="BotoesAcesso2">Perfil</button>
+            <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
             <button class="BotoesAcesso3">Suporte</button>
         </div>
     </header>
@@ -207,6 +208,7 @@
 
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
