--- a/perfil.html
+++ b/perfil.html
@@ -11,10 +11,10 @@
         <div class="head">
             <img class="header" src="img/logo.png" alt="Logo da empresa">
             <h1>TechInvestiment</h1>
-            <button class="BotoesAcesso">DashBoard</button>
-            <button class="BotoesAcesso2">Perfil</button>
-            <button class="BotoesAcesso2">Equipe</button>
-            <button class="BotoesAcesso2">Suporte</button>
+            <button onclick="irDashBoard()" class="BotoesAcesso">DashBoard</button>
+            <button class="BotoesAcesso3">Perfil</button>
+            <button onclick="irEquipe()" class="BotoesAcesso2">Equipe</button>
+            <button onclick="irSuporte()" class="BotoesAcesso2">Suporte</button>
         </div>
     </header>
     <main>
