--- a/Cadastro.html
+++ b/Cadastro.html
@@ -40,7 +40,7 @@
                 <input type="checkbox" class="aceitartermos" id="aceitartermos">
                 <label for="aceitartermos" class="labelace">Aceito os termos de uso e política de privacidade</label>
             </div>
-            <button onclick="irTezte()" class="criarconta" id="btnCriarConta">Criar Conta</button>
+            <button onclick="irDashBoard()" class="criarconta" id="btnCriarConta">Criar Conta</button>
             <p class="jatem">Já tem uma conta?<a href="" class="alink"> Faça login aqui</a></p>
         </div>
         </div>
