--- a/perfil.html
+++ b/perfil.html
@@ -25,7 +25,7 @@
             </div>
             <div>
                 <button class="botaoperfil">
-                <img src="img/olho-aberto.png" alt="icone" class="iconeperfil"> <p class="p1">Mostra Dados</p>
+                <img  src="img/olho-aberto.png" alt="icone" class="iconeperfil"> <p class="p1">Mostra Dados</p>
                 </button>   
             </div>
         </div>
@@ -35,13 +35,13 @@
             <p>Mantenha seus dados sempre atualizados</p>
             </div>
             <div>
-            <button>
+            <button id="btnEditarNome" readonly>
                 <img src="img/logo lapis.png" alt="icone" class="iconeedita"> Editar Perfil
             </button>
             </div>
             <div class="linha1">
                 <label for="nomeperfil">Nome Completo</label>
-            <input type="text" class="nomeperfil">
+            <input  type="text" id="seuNome" class="nomeperfil">
             <label for="telefoneperfil">Telefone</label>
             <input type="text" class="telefoneperfil">
             <label for="datadenacimento">Data de Nascimento</label>
@@ -110,5 +110,6 @@
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
