--- a/Suporte.html
+++ b/Suporte.html
@@ -73,61 +73,50 @@
                     <strong><p>Conta</p></strong>
                 </div>
                 <div class="divcontasuporte">
-                    <hr class="primeiralinhasp">
-                    <p class="texto1sp">Como criar uma conta no TechInvestiment?</p>
+                    <strong><p>Como criar uma conta no TechInvestiment?</p></strong>
                     <p class="texto2sp">É muito simples! Clique em "Cadastrar" na página inicial, preencha seus dados básicos e confirme seu e-mail. Todo o processo leva menos de 5 minutos.</p>
                 </div>
-                <div>
-                    <hr>
-                    <p>Como alterar minha senha?</p>
-                    <p>Vá em "Perfil" > "Segurança" e clique em "Alterar Senha". Você receberá um link de confirmação
-                        por e-mail.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Como alterar minha senha?</p></strong>
+                    <p class="texto2sp">Vá em "Perfil" > "Segurança" e clique em "Alterar Senha". Você receberá um link de confirmação por e-mail.</p>
                 </div>
-                <div>
-                    <hr>
-                    <p>Posso ter mais de uma conta?</p>
-                    <p>Cada pessoa pode ter apenas uma conta vinculada ao seu CPF, conforme regulamentação da CVM.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Posso ter mais de uma conta?</p>
+                    <p class="texto2sp">Cada pessoa pode ter apenas uma conta vinculada ao seu CPF, conforme regulamentação da CVM.</p>
                 </div>
-                <hr>
-                <div>
-                    <img src="" alt="">
-                    Investimentos
+                <hr class="linhadivisoria">
+                <div class="contasuporte">
+                    <img src="img/logoinvestimentossuporte.png" alt="logodeinvestimento">
+                    <strong><p>Investimentos</p></strong>
                 </div>
-                <div>
-                    <hr>
-                    <p>Qual o valor mínimo para começar a investir?</p>
-                    <p>Você pode começar com apenas R$ 100. Temos opções de investimento para todos os perfis e
-                        orçamentos.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Qual o valor mínimo para começar a investir?</p></strong>
+                    <p class="texto2sp">Você pode começar com apenas R$ 100. Temos opções de investimento para todos os perfis e orçamentos.</p>
                 </div>
-                <div>
-                    <hr>
-                    <p>Como funciona a diversificação?</p>
-                    <p>A diversificação é distribuir seus investimentos em diferentes tipos de ativos para reduzir
-                        riscos. Nossa plataforma te ajuda a criar um portfólio equilibrado.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Como funciona a diversificação?</p></strong>
+                    <p class="texto2sp">A diversificação é distribuir seus investimentos em diferentes tipos de ativos para reduzir riscos. Nossa plataforma te ajuda a criar um portfólio equilibrado.</p>
                 </div>
-                <div>
-                    <p>Quando posso resgatar meus investimentos?</p>
-                    <p>Depende do tipo de investimento. Alguns são diários (como fundos DI), outros têm prazos
-                        específicos (como CDBs). Todas as informações estão disponíveis antes de investir.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Quando posso resgatar meus investimentos?</p></strong>
+                    <p class="texto2sp">Depende do tipo de investimento. Alguns são diários (como fundos DI), outros têm prazos específicos (como CDBs). Todas as informações estão disponíveis antes de investir.</p>
                 </div>
-                <hr>
-                <div>
-                    <img src="" alt="">
-                    <p>Pagamentos</p>
+                <hr class="linhadivisoria">
+                <div class="contasuporte">
+                    <img src="img/logopagamentossuporte.png" alt="logopagamento">
+                    <strong><p>Pagamentos</p></strong>
                 </div>
-                <div>
-                    <p>Quais formas de pagamento são aceitas?</p>
-                    <p>Aceitamos TED, DOC, PIX e transferência bancária. O PIX é processado instantaneamente.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Quais formas de pagamento são aceitas?</p></strong>
+                    <p class="texto2sp">Aceitamos TED, DOC, PIX e transferência bancária. O PIX é processado instantaneamente.</p>
                 </div>
-                <div>
-                    <p>Há alguma taxa para aportes?</p>
-                    <p>Não cobramos taxas para aportes via PIX ou TED. Algumas operações específicas podem ter custos
-                        que são informados previamente.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Há alguma taxa para aportes?</p></strong>
+                    <p class="texto2sp">Não cobramos taxas para aportes via PIX ou TED. Algumas operações específicas podem ter custos que são informados previamente.</p>
                 </div>
-                <div>
-                    <p>Como funciona o resgate?</p>
-                    <p>Os resgates são processados em até 2 dias úteis e o valor é creditado na sua conta bancária
-                        cadastrada.</p>
+                <div class="divcontasuporte">
+                    <strong><p>Como funciona o resgate?</p></strong>
+                    <p class="texto2sp">Os resgates são processados em até 2 dias úteis e o valor é creditado na sua conta bancária cadastrada.</p>
                 </div>
             </div>
         
@@ -165,7 +154,7 @@
                     <div>
                         <p>Sistema de Pagamentos</p>
                     </div>
-                    <hr>
+                    <hr class="linhadivisoria">
                     <p>Última atualização: hoje às 14:30</p>
                 </div>
             </div>
